--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- Load navmesh (recommended as glTF) -->
       <a-assets>
         <!-- If you converted the obj to glb, point to that URL -->
-        <a-asset-item id="navmesh" src="navmesh.glb"></a-asset-item>
+        <a-asset-item id="navmesh" src="./disc_navmesh.glb"></a-asset-item>
         <!-- OR if you must use OBJ, use obj-model (some nav components prefer glTF/BufferGeometry) -->
         <!-- <a-asset-item id="navobj" src="disc_navmesh.obj"></a-asset-item> -->
       </a-assets>
